Stopped being lazy and moved away from filter:invert for dark mode.Cleaned up some CSS, did some adjustments on the Modal CSS as well

--- a/app/components/Extra/styles.scss
+++ b/app/components/Extra/styles.scss
@@ -10,7 +10,7 @@
                 height: 300px;
                 margin: 0 25px 5px 25px;
 
-                border: 1px solid #e06b57;
+                border: 1px solid var(--primary-color);
 
                 object-fit: cover;
                 object-position: center center;
