--- a/app/components/Projects/styles.scss
+++ b/app/components/Projects/styles.scss
@@ -35,15 +35,15 @@ $types: all, js, vue, angular, react, wordpress, node;
         cursor: not-allowed;
         user-select: none;
 
-        color: #fff;
+        color: var(--projects-text-color);
         border: 1px solid #ceced0;
-        background: #3a3935;
+        background: var(--projects-bg-color);
 
         &.has {
             cursor: help;
 
             border-width: 2px;
-            border-color: #1f94a8;
+            border-color: var(--projects-primary-color);
         }
 
         .photo {
@@ -56,7 +56,6 @@ $types: all, js, vue, angular, react, wordpress, node;
                 width: 100%;
                 height: 100%;
 
-                filter: invert(100%);
                 object-fit: contain;
             }
         }
@@ -67,7 +66,7 @@ $types: all, js, vue, angular, react, wordpress, node;
             width: 75%;
             padding-left: 10px;
 
-            border-left: 2px solid #1f94a8;
+            border-left: 2px solid var(--projects-primary-color);
         }
 
         p {
@@ -81,12 +80,17 @@ $types: all, js, vue, angular, react, wordpress, node;
         }
 
         span {
+            font-weight: 700;
             font-style: normal;
+
+            display: block;
+
+            margin-top: 5px;
 
             text-transform: uppercase;
 
             opacity: 0.75;
-            color: #1f94a8;
+            color: var(--projects-primary-color);
         }
     }
 }
@@ -107,7 +111,7 @@ $types: all, js, vue, angular, react, wordpress, node;
         cursor: pointer;
         transition: filter 550ms ease-in-out;
 
-        background: #1f94a8;
+        background: var(--projects-primary-color);
 
         place-content: center;
 
@@ -117,9 +121,7 @@ $types: all, js, vue, angular, react, wordpress, node;
     }
 }
 
-.invert-fix {
-    position: relative;
-}
+
 
 @media (max-width: 991px) {
     .menu {
